test/invalid/fc36994_TestParameters/MethodHolder.plume
/**
 * For testing method calls
 * @author 36994, César Santos
 */
class MethodHolder extends Object is
  method test : (a : Integer) -> Integer is
    a + 5